IALERT-3810: Add a checkbox to override and create JSON from value.